--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,12 @@
 
     <groupId>org.iban4j</groupId>
     <artifactId>iban4j</artifactId>
-    <version>3.2.2-SNAPSHOT</version>
+    <version>3.2.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>iban4j</name>
-    <description>A Java library for International Bank Account Number (IBAN) generation.</description>
+    <description>A Java library for International Bank Account Number (IBAN) generation.
+    </description>
     <url>http://iban4j.org</url>
 
     <licenses>
@@ -35,18 +36,16 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:arturmkrtchyan/iban4j.git</connection>
-        <developerConnection>scm:git:git@github.com:arturmkrtchyan/iban4j.git</developerConnection>
-        <url>git@github.com:arturmkrtchyan/iban4j.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <connection>scm:git:https://github.com/Cleafy/iban4j.git</connection>
+        <developerConnection>scm:git:https://github.com/Cleafy/iban4j.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <developers>
         <developer>
             <name>Artur Mkrtchyan</name>
         </developer>
     </developers>
-
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -134,7 +133,8 @@
                         </goals>
                         <configuration>
                             <!-- Sets the path to the file which contains the execution data. -->
-                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
+                            </destFile>
                             <!--
                                Sets the name of the property containing the settings
                                for JaCoCo runtime agent.
@@ -164,9 +164,11 @@
 
                             </excludes>
                             <!-- Sets the path to the file which contains the execution data. -->
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
+                            </dataFile>
                             <!-- Sets the output directory for the code coverage report. -->
-                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -187,11 +189,17 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
-              <groupId>org.eluder.coveralls</groupId>
-              <artifactId>coveralls-maven-plugin</artifactId>
-              <version>3.0.1</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>3.0.1</version>
             </plugin>
 
             <!-- Generating Javadoc during verify phase -->
@@ -301,6 +309,5 @@
         </profile>
 
     </profiles>
-
 
 </project>
