--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:arturmkrtchyan/iban4j.git</connection>
-        <developerConnection>scm:git:git@github.com:arturmkrtchyan/iban4j.git</developerConnection>
-        <url>git@github.com:arturmkrtchyan/iban4j.git</url>
+        <connection>scm:git:git@github.com:Cleafy/iban4j.git</connection>
+        <developerConnection>scm:git:git@github.com:Cleafy/iban4j.git</developerConnection>
+        <url>git@github.com:Cleafy/iban4j.git</url>
       <tag>HEAD</tag>
   </scm>
 
@@ -48,6 +48,10 @@
     </developers>
 
     <distributionManagement>
+        <repository>
+            <id>nexus-server</id>
+            <url>https://nexus.cleafy.org/repository/iban4j/</url>
+        </repository>
         <snapshotRepository>
             <id>nexus-server</id>
             <url>https://nexus.cleafy.org/repository/iban4j/</url>
