--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
   limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.iban4j</groupId>
@@ -23,7 +25,8 @@
     <packaging>jar</packaging>
 
     <name>iban4j</name>
-    <description>A Java library for International Bank Account Number (IBAN) generation.</description>
+    <description>A Java library for International Bank Account Number (IBAN) generation.
+    </description>
     <url>http://iban4j.org</url>
 
     <licenses>
@@ -35,11 +38,10 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:Cleafy/iban4j.git</connection>
-        <developerConnection>scm:git:git@github.com:Cleafy/iban4j.git</developerConnection>
-        <url>git@github.com:Cleafy/iban4j.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <connection>scm:git:https://github.com/Cleafy/iban4j.git</connection>
+        <developerConnection>scm:git:https://github.com/Cleafy/iban4j.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <developers>
         <developer>
@@ -144,7 +146,8 @@
                         </goals>
                         <configuration>
                             <!-- Sets the path to the file which contains the execution data. -->
-                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
+                            </destFile>
                             <!--
                                Sets the name of the property containing the settings
                                for JaCoCo runtime agent.
@@ -174,9 +177,11 @@
 
                             </excludes>
                             <!-- Sets the path to the file which contains the execution data. -->
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
+                            </dataFile>
                             <!-- Sets the output directory for the code coverage report. -->
-                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -197,7 +202,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -205,9 +210,9 @@
             </plugin>
 
             <plugin>
-              <groupId>org.eluder.coveralls</groupId>
-              <artifactId>coveralls-maven-plugin</artifactId>
-              <version>3.0.1</version>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>3.0.1</version>
             </plugin>
 
             <!-- Generating Javadoc during verify phase -->
