--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,12 @@
   limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.iban4j</groupId>
     <artifactId>iban4j</artifactId>
-    <version>3.2.2-SNAPSHOT</version>
+    <version>3.2.2</version>
     <packaging>jar</packaging>
 
     <name>iban4j</name>
@@ -40,7 +38,7 @@
     <scm>
         <connection>scm:git:https://github.com/Cleafy/iban4j.git</connection>
         <developerConnection>scm:git:https://github.com/Cleafy/iban4j.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>iban4j-3.2.2</tag>
     </scm>
 
     <developers>
