--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.iban4j</groupId>
     <artifactId>iban4j</artifactId>
-    <version>3.2.3-SNAPSHOT</version>
+    <version>3.2.3</version>
     <packaging>jar</packaging>
 
     <name>iban4j</name>
@@ -38,7 +38,7 @@
     <scm>
         <connection>scm:git:https://github.com/Cleafy/iban4j.git</connection>
         <developerConnection>scm:git:https://github.com/Cleafy/iban4j.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>iban4j-3.2.3</tag>
     </scm>
 
     <developers>
