--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.iban4j</groupId>
     <artifactId>iban4j</artifactId>
-    <version>3.2.4-SNAPSHOT</version>
+    <version>3.2.5</version>
     <packaging>jar</packaging>
 
     <name>iban4j</name>
